PLANNER-495, PLANNER-717 Supply-demand in pillars and nearby (#2483)