@@ -1,5 +1,6 @@
 package org.optaplanner.core.impl.heuristic.selector.entity.pillar;
 
+import static org.mockito.Mockito.doReturn;
 import static org.mockito.Mockito.mock;
 import static org.mockito.Mockito.when;
 import static org.optaplanner.core.impl.testdata.util.PlannerAssert.assertAllCodesOfPillarSelector;
@@ -9,65 +10,31 @@ import static org.optaplanner.core.impl.testdata.util.PlannerAssert.verifyPhaseL
 
 import java.util.Arrays;
 import java.util.Comparator;
+import java.util.List;
 import java.util.Random;
 
+import org.assertj.core.api.Assertions;
 import org.junit.jupiter.api.Test;
+import org.optaplanner.core.api.score.buildin.simple.SimpleScore;
 import org.optaplanner.core.config.heuristic.selector.entity.pillar.SubPillarConfigPolicy;
+import org.optaplanner.core.impl.domain.solution.descriptor.SolutionDescriptor;
 import org.optaplanner.core.impl.domain.variable.descriptor.GenuineVariableDescriptor;
+import org.optaplanner.core.impl.domain.variable.listener.support.VariableListenerSupport;
+import org.optaplanner.core.impl.domain.variable.supply.SupplyManager;
 import org.optaplanner.core.impl.heuristic.selector.SelectorTestUtils;
 import org.optaplanner.core.impl.heuristic.selector.entity.EntitySelector;
 import org.optaplanner.core.impl.phase.scope.AbstractPhaseScope;
 import org.optaplanner.core.impl.phase.scope.AbstractStepScope;
+import org.optaplanner.core.impl.score.director.InnerScoreDirector;
 import org.optaplanner.core.impl.solver.scope.SolverScope;
 import org.optaplanner.core.impl.testdata.domain.TestdataEntity;
 import org.optaplanner.core.impl.testdata.domain.TestdataObject;
+import org.optaplanner.core.impl.testdata.domain.TestdataSolution;
 import org.optaplanner.core.impl.testdata.domain.TestdataValue;
 import org.optaplanner.core.impl.testdata.util.PlannerTestUtils;
 import org.optaplanner.core.impl.testutil.TestRandom;
 
 class DefaultPillarSelectorTest {
-
-    //    @Test
-    //    public void calculateBasePillarSelectionSize() {
-    //        assertCalculateBasePillarSelectionSize(4L, 1, 1);
-    //        assertCalculateBasePillarSelectionSize(6L, 2, 2);
-    //        assertCalculateBasePillarSelectionSize(4L, 3, 3);
-    //        assertCalculateBasePillarSelectionSize(1L, 4, 4);
-    //
-    //        assertCalculateBasePillarSelectionSize(10L, 1, 2);
-    //        assertCalculateBasePillarSelectionSize(14L, 1, 3);
-    //        assertCalculateBasePillarSelectionSize(15L, 1, 4);
-    //        assertCalculateBasePillarSelectionSize(10L, 2, 3);
-    //        assertCalculateBasePillarSelectionSize(11L, 2, 4);
-    //        assertCalculateBasePillarSelectionSize(5L, 3, 4);
-    //
-    //        assertCalculateBasePillarSelectionSize(15L, 1, 5);
-    //        assertCalculateBasePillarSelectionSize(11L, 2, 5);
-    //        assertCalculateBasePillarSelectionSize(5L, 3, 5);
-    //        assertCalculateBasePillarSelectionSize(1L, 4, 5);
-    //        assertCalculateBasePillarSelectionSize(0L, 5, 5);
-    //    }
-    //
-    //    private void assertCalculateBasePillarSelectionSize(long expected, int minimumPillarSize, int maximumPillarSize) {
-    //        TestdataValue val1 = new TestdataValue("1");
-    //        TestdataValue val2 = new TestdataValue("2");
-    //        TestdataValue val3 = new TestdataValue("3");
-    //        TestdataValue val4 = new TestdataValue("4");
-    //
-    //        final TestdataEntity a = new TestdataEntity("a", val1);
-    //        final TestdataEntity b = new TestdataEntity("b", val2);
-    //        final TestdataEntity c = new TestdataEntity("c", val3);
-    //        final TestdataEntity d = new TestdataEntity("d", val2);
-    //
-    //        EntitySelector entitySelector = SelectorTestUtils.mockEntitySelector(TestdataEntity.class,
-    //                a, b, c, d);
-    //        GenuineVariableDescriptor variableDescriptor = SelectorTestUtils.mockVariableDescriptor(
-    //                entitySelector.findEntityDescriptorOrFail(), "value");
-    //        DefaultPillarSelector selector = new DefaultPillarSelector(
-    //                entitySelector, Collections.singletonList(variableDescriptor), false,
-    //                true, minimumPillarSize, maximumPillarSize);
-    //        assertEquals(expected, selector.calculateBasePillarSelectionSize(Arrays.<Object>asList(a, b, c, d)));
-    //    }
 
     @Test
     void originalNoSubs() {
@@ -87,10 +54,10 @@ class DefaultPillarSelectorTest {
         EntitySelector entitySelector = SelectorTestUtils.mockEntitySelector(variableDescriptor.getEntityDescriptor(),
                 a, b, c, d, e, f);
 
-        DefaultPillarSelector pillarSelector = new DefaultPillarSelector(
-                entitySelector, Arrays.asList(variableDescriptor), false, SubPillarConfigPolicy.withoutSubpillars());
+        DefaultPillarSelector pillarSelector = new DefaultPillarSelector(entitySelector, List.of(variableDescriptor), false,
+                SubPillarConfigPolicy.withoutSubpillars());
 
-        SolverScope solverScope = mock(SolverScope.class);
+        SolverScope<TestdataSolution> solverScope = mockSolverScope();
         pillarSelector.solvingStarted(solverScope);
 
         AbstractPhaseScope phaseScopeA = mock(AbstractPhaseScope.class);
@@ -131,15 +98,26 @@ class DefaultPillarSelectorTest {
         verifyPhaseLifecycle(entitySelector, 1, 2, 3);
     }
 
+    private SolverScope<TestdataSolution> mockSolverScope() {
+        SolutionDescriptor<TestdataSolution> solutionDescriptor = TestdataSolution.buildSolutionDescriptor();
+        InnerScoreDirector<TestdataSolution, SimpleScore> scoreDirector = mock(InnerScoreDirector.class);
+        doReturn(solutionDescriptor).when(scoreDirector).getSolutionDescriptor();
+        doReturn(VariableListenerSupport.create(scoreDirector)).when(scoreDirector).getSupplyManager();
+
+        SolverScope<TestdataSolution> solverScope = mock(SolverScope.class);
+        doReturn(scoreDirector).when(solverScope).getScoreDirector();
+        return solverScope;
+    }
+
     @Test
     void emptyEntitySelectorOriginalNoSubs() {
         GenuineVariableDescriptor variableDescriptor = TestdataEntity.buildVariableDescriptorForValue();
         EntitySelector entitySelector = SelectorTestUtils.mockEntitySelector(variableDescriptor.getEntityDescriptor());
 
-        DefaultPillarSelector pillarSelector = new DefaultPillarSelector(
-                entitySelector, Arrays.asList(variableDescriptor), false, SubPillarConfigPolicy.withoutSubpillars());
+        DefaultPillarSelector pillarSelector = new DefaultPillarSelector(entitySelector, List.of(variableDescriptor), false,
+                SubPillarConfigPolicy.withoutSubpillars());
 
-        SolverScope solverScope = mock(SolverScope.class);
+        SolverScope<TestdataSolution> solverScope = mockSolverScope();
         pillarSelector.solvingStarted(solverScope);
 
         AbstractPhaseScope phaseScopeA = mock(AbstractPhaseScope.class);
@@ -201,7 +179,7 @@ class DefaultPillarSelectorTest {
 
         TestRandom workingRandom = new TestRandom(0);
 
-        SolverScope solverScope = mock(SolverScope.class);
+        SolverScope<TestdataSolution> solverScope = mockSolverScope();
         when(solverScope.getWorkingRandom()).thenReturn(workingRandom);
         pillarSelector.solvingStarted(solverScope);
 
@@ -285,7 +263,7 @@ class DefaultPillarSelectorTest {
                 1, 0, 0, 0, // [c, e]
                 0, 0, 0, 0); // [b, d]
 
-        SolverScope solverScope = mock(SolverScope.class);
+        SolverScope<TestdataSolution> solverScope = mockSolverScope();
         when(solverScope.getWorkingRandom()).thenReturn(workingRandom);
         pillarSelector.solvingStarted(solverScope);
 
@@ -335,7 +313,7 @@ class DefaultPillarSelectorTest {
                 0, 0 // [a]
         );
 
-        SolverScope solverScope = mock(SolverScope.class);
+        SolverScope<TestdataSolution> solverScope = mockSolverScope();
         when(solverScope.getWorkingRandom()).thenReturn(workingRandom);
         pillarSelector.solvingStarted(solverScope);
 
@@ -363,7 +341,7 @@ class DefaultPillarSelectorTest {
                 entitySelector, Arrays.asList(variableDescriptor), true,
                 SubPillarConfigPolicy.withSubpillarsUnlimited());
 
-        SolverScope solverScope = mock(SolverScope.class);
+        SolverScope<TestdataSolution> solverScope = mockSolverScope();
         pillarSelector.solvingStarted(solverScope);
 
         AbstractPhaseScope phaseScopeA = mock(AbstractPhaseScope.class);
@@ -399,6 +377,72 @@ class DefaultPillarSelectorTest {
         pillarSelector.solvingEnded(solverScope);
 
         verifyPhaseLifecycle(entitySelector, 1, 2, 3);
+    }
+
+    @Test
+    void reusePillarCache() {
+        TestdataValue val1 = new TestdataValue("1");
+        TestdataValue val2 = new TestdataValue("2");
+        TestdataValue val3 = new TestdataValue("3");
+
+        final TestdataEntity a = new TestdataEntity("a", val1);
+        final TestdataEntity b = new TestdataEntity("b", val2);
+        final TestdataEntity c = new TestdataEntity("c", val3);
+        final TestdataEntity d = new TestdataEntity("d", val2);
+        final TestdataEntity e = new TestdataEntity("e", val3);
+        final TestdataEntity f = new TestdataEntity("f", val3);
+
+        GenuineVariableDescriptor variableDescriptor = TestdataEntity.buildVariableDescriptorForValue();
+        EntitySelector entitySelector = SelectorTestUtils.mockEntitySelector(variableDescriptor.getEntityDescriptor(),
+                a, b, c, d, e, f);
+
+        DefaultPillarSelector pillarSelector1 = new DefaultPillarSelector(entitySelector, List.of(variableDescriptor), false,
+                SubPillarConfigPolicy.withoutSubpillars());
+        DefaultPillarSelector pillarSelector2 = new DefaultPillarSelector(entitySelector, List.of(variableDescriptor), false,
+                SubPillarConfigPolicy.withoutSubpillars());
+
+        SolverScope<TestdataSolution> solverScope = mockSolverScope();
+        pillarSelector1.solvingStarted(solverScope);
+        pillarSelector2.solvingStarted(solverScope);
+
+        AbstractPhaseScope phaseScopeA = mock(AbstractPhaseScope.class);
+        when(phaseScopeA.getSolverScope()).thenReturn(solverScope);
+        pillarSelector1.phaseStarted(phaseScopeA);
+        pillarSelector2.phaseStarted(phaseScopeA);
+
+        AbstractStepScope stepScopeA1 = mock(AbstractStepScope.class);
+        when(stepScopeA1.getPhaseScope()).thenReturn(phaseScopeA);
+
+        /*
+         * We do not have a direct way of testing that the pillar cache is reused.
+         * But we can check that the pillar supply is properly updated.
+         *
+         * It starts with active count 0, then first selector creates the supply and active count goes to 1.
+         * Second selector increases the count to 2, but the supply stays the same.
+         * Then after step end, the same process repeats in reverse, eventually reaching zero active count.
+         */
+        SupplyManager pillarSupplyManager = solverScope.getScoreDirector().getSupplyManager();
+        Assertions.assertThat(pillarSupplyManager.getActiveCount(pillarSelector1.getPillarDemand())).isEqualTo(0);
+        pillarSelector1.stepStarted(stepScopeA1);
+        Assertions.assertThat(pillarSupplyManager.getActiveCount(pillarSelector1.getPillarDemand())).isEqualTo(1);
+
+        Assertions.assertThat(pillarSupplyManager.getActiveCount(pillarSelector2.getPillarDemand())).isEqualTo(1);
+        pillarSelector2.stepStarted(stepScopeA1);
+        Assertions.assertThat(pillarSupplyManager.getActiveCount(pillarSelector2.getPillarDemand())).isEqualTo(2);
+
+        Assertions.assertThat(pillarSupplyManager.getActiveCount(pillarSelector1.getPillarDemand())).isEqualTo(2);
+        pillarSelector1.stepEnded(stepScopeA1);
+        Assertions.assertThat(pillarSupplyManager.getActiveCount(pillarSelector1.getPillarDemand())).isEqualTo(1);
+
+        Assertions.assertThat(pillarSupplyManager.getActiveCount(pillarSelector1.getPillarDemand())).isEqualTo(1);
+        pillarSelector2.stepEnded(stepScopeA1);
+        Assertions.assertThat(pillarSupplyManager.getActiveCount(pillarSelector1.getPillarDemand())).isEqualTo(0);
+
+        pillarSelector1.phaseEnded(phaseScopeA);
+        pillarSelector2.phaseEnded(phaseScopeA);
+
+        pillarSelector1.solvingEnded(solverScope);
+        pillarSelector2.solvingEnded(solverScope);
     }
 
 }
